--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,4 @@
 body {
-  padding: 50px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
@@ -7,7 +6,17 @@ a {
   color: #00B7FF;
 }
 
+#sidebar {
+  padding: 25px;
+  overflow-y: scroll;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  bottom: 0px;
+  width: 425px;;
+}
+
 div#gmaps {
-  width: 100%;
-  height: 500px;
+  height: 100%;
+  margin-left: 425px;
 }
